Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.9.2, 5.10.0 Beta 2
-
Fix Version/s: 5.9.3, 5.10.0 Beta 4
-
Component/s: Quick: Controls 2
-
Labels:None
-
Environment:Windows
-
Commits:fbb5e0310687f8c628dc6e82a5f8b80fcd972f60
Description
I'm trying to use released(mouseEvent) signal to show context menu for TextArea and TextField.
TextArea works fine, but TextField clears text selection on mouse right click.