src/quicktemplates2/qquicktextfield.cpp
@@ -547,7 +547,8 @@ void QQuickTextField::mousePressEvent(QMouseEvent *event)
             QQuickTextInput::mousePressEvent(d->pressHandler.delayedMousePressEvent);
             d->pressHandler.clearDelayedMouseEvent();
         }
-        QQuickTextInput::mousePressEvent(event);
+        if (event->buttons() != Qt::RightButton)
+            QQuickTextInput::mousePressEvent(event);
     }
 }
 
@@ -560,7 +561,8 @@ void QQuickTextField::mouseMoveEvent(QMouseEvent *event)
             QQuickTextInput::mousePressEvent(d->pressHandler.delayedMousePressEvent);
             d->pressHandler.clearDelayedMouseEvent();
         }
-        QQuickTextInput::mouseMoveEvent(event);
+        if (event->buttons() != Qt::RightButton)
+            QQuickTextInput::mouseMoveEvent(event);
     }
 }
 
@@ -573,7 +575,8 @@ void QQuickTextField::mouseReleaseEvent(QMouseEvent *event)
             QQuickTextInput::mousePressEvent(d->pressHandler.delayedMousePressEvent);
             d->pressHandler.clearDelayedMouseEvent();
         }
-        QQuickTextInput::mouseReleaseEvent(event);
+        if (event->buttons() != Qt::RightButton)
+            QQuickTextInput::mouseReleaseEvent(event);
     }
 }
 
@@ -584,7 +587,8 @@ void QQuickTextField::mouseDoubleClickEvent(QMouseEvent *event)
         QQuickTextInput::mousePressEvent(d->pressHandler.delayedMousePressEvent);
         d->pressHandler.clearDelayedMouseEvent();
     }
-    QQuickTextInput::mouseDoubleClickEvent(event);
+    if (event->buttons() != Qt::RightButton)
+        QQuickTextInput::mouseDoubleClickEvent(event);
 }
 
 void QQuickTextField::timerEvent(QTimerEvent *event)
